# Notion-Query-Translator

./: .env.example  .gitignore  README.MD  all_functionality.py  build_rag.py  conf.py  config.py  current_tests.py  demo.ipynb  evaluate.ipynb  evaluate.py  evaluator.py  index.rst  langgraph.json  map-reduce.ipynb  prompts.py  pyproject.toml  rag,codium,judge.ipynb  rag.ipynb  rag_exp_end2end.ipynb  run_pipeline.py  solution.py
docs/: ARCHITECTURE.MD  COMPONENTS.md  EVALUATION.md  evaluations.md  notion-database-use-cases.md
docs/source/: src.adapters.rst  src.core.rst  src.evaluation.rst  src.models.rst  src.presentation.rst  src.rst  src.utils.rst
evals/: EVALUATIONS_SUMMARY.md  add_task.yaml  add_task_test.py  add_toggle_to_page.yaml  append_checklist_to_page_synthetic.yaml  codegen_reflect_v1.yaml  get_page_content_synthetic.yaml  manual_test.ipynb  retrieve_tasks.yaml  security_precheck_v1.yaml  test_dbs_script.py  title_search_v1.yaml  update_task_status_synthetic.yaml
evals/complex/: archive_stale_tasks.yaml  create_task_with_blocks_and_relation.yaml  propagate_status_done.yaml  update_imminent_tasks.yaml  vague_emergency_escalation.yaml
evals/docs/: EVALUATIONS_SUMMARY.md  RAG EVAL.xlsx
evals/precheck/: general_precheck_v1.yaml  security_precheck_v1.yaml
evals/security/: boundary_enforcement_finance_db.yaml  secret_leak_prevention.yaml  system_protection.yaml  wipeout_refusal.yaml
evals/simple/: add_task.yaml  append_checklist_to_page_synthetic.yaml  get_page_content_synthetic.yaml  retrieve_tasks.yaml  update_task_status_synthetic.yaml
evaluation/: __init__.py  conftest.py  evaluate.py  test_code_generation.py  test_e2e.py  test_general_precheck.py  test_security_precheck.py  test_title_search.py
notebooks/: cli.ipynb  exps_analysis.ipynb  map-reduce.ipynb
notion_query/: cli.py  environment.py  run_pipeline.py
scripts/: build_rag.py  run_error_analysis.py  sandbox_notion_page.py  schema_retriever.py
src/: all_functionality.py  config.py  error_analysis.py  evaluation_utils.py  evaluator.py  execution_utils.py  guards.py  hardcoded_contexts.py  nodes.py  openai_utils.py  prompts.py  rag_utils.py  routing.py  running_utils.py  schema.py
src/adapters/: __init__.py  cli_factory.py  cli_presenter.py
src/core/: __init__.py  execute_batch.py  execute_single.py  lifecycle.py
src/evaluation/: __init__.py  evaluator.py  sandbox.py  shared.py  utils.py
src/models/: __init__.py  config.py  hardcoded_contexts.py  prompts.py  schema.py
src/presentation/: __init__.py  cli_helpers.py  cli_shell.py  notion_requesting.py  sanitization.py  ui_bridge.py  viewer.py
src/utils/: __init__.py  execution_envelope.py  execution_utils.py  openai_utils.py  page_cache.py  rag_utils.py  telemetry.py
tests/: conftest.py
tests/fixtures/: page_markdown.md  page_properties.json
tests/integration/: test_e2b_sandbox_vcr.py  test_llm.py
tests/orchestration/: test_graph_logic.py
tests/smoke/: test_cli_e2e.py  test_env.py  (+1 more)
(+62 files in other folders)
